# syrupy-geo

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
docs/: index.md
docs/explanation/: assertion-order.md  how-snapshots-work.md  index.md
docs/how-to/: index.md  override-fixture.md  parametrized-tests.md  store-on-s3.md  update-snapshots.md
docs/reference/: configuration.md  extensions.md  index.md
docs/tutorials/: geodataframe-snapshots.md  index.md  xarray-snapshots.md
syrupy_geo/: __init__.py  _base.py  geodataframe.py  plugin.py  xarray.py
tests/: conftest.py  test_geodataframe.py  test_xarray.py
tests/__snapshots__/icechunk/: repo
tests/__snapshots__/icechunk/manifests/: DMC1744G36CY9G9YFJN0  NAYXTG70TJ7Q3YZ2PHQG  Q6HRZG5VTTW458F4XBD0  SAFHK83MHNR35G2321X0  SQPB71R6C3SY8RK0HHDG
tests/__snapshots__/icechunk/overwritten/: repo.30720903310603.AYPV3HEDWP9VMD0H7NDG
tests/__snapshots__/icechunk/snapshots/: 1CECHNKREP0F1RSTCMT0  6VEA1BWZJ8YHFSNX4GP0
tests/__snapshots__/icechunk/transactions/: 1CECHNKREP0F1RSTCMT0  6VEA1BWZJ8YHFSNX4GP0
tests/__snapshots__/test_geodataframe/: test_geodataframe_snapshot.parquet
tests/__snapshots__/test_xarray/test_dataarray_snapshot.zarr/: zarr.json
tests/__snapshots__/test_xarray/test_dataarray_snapshot.zarr/data/: zarr.json
tests/__snapshots__/test_xarray/test_dataarray_snapshot.zarr/data/c/0/: 0
tests/__snapshots__/test_xarray/test_dataset_snapshot.zarr/: zarr.json
