
[tool.pixi.workspace]
    channels  = ["conda-forge"]
    name      = "syrupy-geo"
    platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
    syrupy-geo = { path = ".", editable = true }

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools-scm[toml]>=6.2", "setuptools>=64", "wheel"]

[project]
    dynamic         = ["version"]
    name            = "syrupy-geo"
    requires-python = ">= 3.12"

[tool.setuptools_scm]
    fallback_version = "999"
    local_scheme     = "node-and-date"
    version_scheme   = "post-release"

[tool.coverage.run]
    branch = true
    omit   = ["tests/*"]

[tool.ruff]
    builtins = ["ellipsis"]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
    extend-include = ["*.ipynb"]
    line-length = 100
    target-version = "py312"

[tool.ruff.lint]
    ignore = [
        "E501", # Conflicts with ruff format
        "E721", # Comparing types instead of isinstance
        "E741", # Ambiguous variable names
    ]
    per-file-ignores = {}
    select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.mccabe]
    max-complexity = 18

[tool.ruff.lint.isort]
    combine-as-imports = true
    known-first-party  = []

[tool.ruff.format]
    docstring-code-format = true
    quote-style           = "single"

[tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.ruff.lint.pyupgrade]
    keep-runtime-typing = true

[tool.pytest.ini_options]
    addopts = [
        "--cov-report=term-missing",
        "--cov-report=xml",
        "--cov=./ocr",
        "--verbose",
    ]
    console_output_style = "count"

[tool.pixi.tasks]
