
[tool.pixi.workspace]
    channels  = ["conda-forge"]
    name      = "syrupy-geo"
    platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
    syrupy-geo = { path = ".", editable = true }

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools-scm[toml]>=6.2", "setuptools>=64", "wheel"]

[project]
    dependencies    = ["syrupy>=5,<6", "universal-pathlib>=0.2"]
    dynamic         = ["version"]
    name            = "syrupy-geo"
    requires-python = ">= 3.11"

[project.optional-dependencies]
    all    = ["syrupy-geo[geo]", "syrupy-geo[xarray]"]
    geo    = ["geopandas>=1.0", "pyarrow>=15"]
    xarray = ["xarray>=2024.1", "zarr>=3"]

[project.entry-points."pytest11"]
    syrupy-geo = "syrupy_geo.plugin"

[tool.setuptools.packages.find]
    include = ["syrupy_geo*"]

[tool.setuptools_scm]
    fallback_version = "999"
    local_scheme     = "node-and-date"
    version_scheme   = "post-release"

[tool.coverage.run]
    branch = true
    omit   = ["tests/*"]

[tool.ruff]
    builtins = ["ellipsis"]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
    extend-include = ["*.ipynb"]
    line-length = 100
    target-version = "py311"

[tool.ruff.lint]
    ignore = [
        "E501", # Conflicts with ruff format
        "E721", # Comparing types instead of isinstance
        "E741", # Ambiguous variable names
    ]
    per-file-ignores = {}
    select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.mccabe]
    max-complexity = 18

[tool.ruff.lint.isort]
    combine-as-imports = true
    known-first-party  = []

[tool.ruff.format]
    docstring-code-format = true
    quote-style           = "single"

[tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.ruff.lint.pyupgrade]
    keep-runtime-typing = true

[tool.pytest.ini_options]
    addopts = [
        "--cov-report=term-missing",
        "--cov-report=xml",
        "--cov=syrupy_geo",
        "--verbose",
    ]
    console_output_style = "count"
    markers = [
        "integration: marks tests as integration tests (deselect with '-m not integration')",
    ]

[tool.pixi.feature.dev.dependencies]
    build      = ">=1.0"
    pre-commit = ">=4.5.1,<5"
    pytest     = ">=8.0.2,<9"
    pytest-cov = ">=6.0.0,<8"
    ruff       = ">=0.15.4,<0.16"
    twine      = ">=6.1"

[tool.pixi.feature.dev.tasks]
    build             = "python -m build --sdist --wheel ."
    check-dist        = "twine check dist/*"
    format            = "ruff format . && ruff check --fix ."
    lint              = "pre-commit run --all-files"
    publish           = "python -m twine upload dist/*"
    run-ruff-check    = "ruff check ."
    tests             = "pytest tests/ -m 'not integration'"
    tests-integration = "pytest tests/ -m integration"

[tool.pixi.feature.py311.dependencies]
    python = "3.11.*"

[tool.pixi.feature.py312.dependencies]
    python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
    python = "3.13.*"

[tool.pixi.environments]
    default = ["dev"]
    dev     = ["dev"]
    py311   = ["dev", "py311"]
    py312   = ["dev", "py312"]
    py313   = ["dev", "py313"]

[tool.pixi.dependencies]
    geopandas = ">=1.1.2,<2"
    pyarrow   = ">=15.0.0"
    s3fs      = ">=2024.1.0"
    xarray    = ">=2026.2.0,<2027"
    zarr      = ">=3.1.5,<4"
