
[tool.pixi.workspace]
    channels  = ["conda-forge"]
    name      = "syrupy-geo"
    platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
    icechunk   = ">=2.0"
    syrupy-geo = { path = ".", editable = true }

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = ["setuptools-scm[toml]>=6.2", "setuptools>=64", "wheel"]

[project]
    authors = [{ name = "Anderson Banihirwe" }]
    classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.12",
        "Programming Language :: Python :: 3.13",
        "Topic :: Scientific/Engineering :: GIS",
        "Topic :: Software Development :: Testing",
    ]
    dependencies = ["syrupy>=5,<6", "universal-pathlib>=0.2"]
    description = "Syrupy snapshot testing extension for geospatial data (xarray/zarr, geopandas/parquet)"
    dynamic = ["version"]
    keywords = [
        "geopandas",
        "geospatial",
        "parquet",
        "snapshot",
        "syrupy",
        "testing",
        "xarray",
        "zarr",
    ]
    license = { text = "MIT" }
    name = "syrupy-geo"
    readme = "README.md"
    requires-python = ">= 3.12"

[project.urls]
    "Bug Tracker" = "https://github.com/andersy005/syrupy-geo/issues"
    "Changelog"   = "https://github.com/andersy005/syrupy-geo/releases"
    "Homepage"    = "https://github.com/andersy005/syrupy-geo"
    "Repository"  = "https://github.com/andersy005/syrupy-geo"

[project.optional-dependencies]
    all      = ["syrupy-geo[geo]", "syrupy-geo[icechunk]", "syrupy-geo[xarray]"]
    geo      = ["geopandas>=1.0", "pyarrow>=15"]
    icechunk = ["icechunk>=2.0", "xarray>=2026.2", "zarr>=3"]
    xarray   = ["icechunk>=2.0", "xarray>=2026.2", "zarr>=3"]

[project.entry-points."pytest11"]
    syrupy-geo = "syrupy_geo.plugin"

[tool.setuptools.packages.find]
    include = ["syrupy_geo*"]

[tool.setuptools_scm]
    fallback_version = "999"
    local_scheme     = "node-and-date"
    version_scheme   = "post-release"

[tool.coverage.run]
    branch = true
    omit   = ["tests/*"]

[tool.ruff]
    builtins = ["ellipsis"]
    exclude = [
        ".bzr",
        ".direnv",
        ".eggs",
        ".git",
        ".git-rewrite",
        ".hg",
        ".ipynb_checkpoints",
        ".mypy_cache",
        ".nox",
        ".pants.d",
        ".pyenv",
        ".pytest_cache",
        ".pytype",
        ".ruff_cache",
        ".svn",
        ".tox",
        ".venv",
        ".vscode",
        "__pypackages__",
        "_build",
        "buck-out",
        "build",
        "dist",
        "node_modules",
        "site-packages",
        "venv",
    ]
    extend-include = ["*.ipynb"]
    line-length = 100
    target-version = "py312"

[tool.ruff.lint]
    ignore = [
        "E501", # Conflicts with ruff format
        "E721", # Comparing types instead of isinstance
        "E741", # Ambiguous variable names
    ]
    per-file-ignores = {}
    select = ["E", "F", "I", "UP", "W"]

[tool.ruff.lint.mccabe]
    max-complexity = 18

[tool.ruff.lint.isort]
    combine-as-imports = true
    known-first-party  = []

[tool.ruff.format]
    docstring-code-format = true
    quote-style           = "single"

[tool.ruff.lint.pydocstyle]
    convention = "numpy"

[tool.ruff.lint.pyupgrade]
    keep-runtime-typing = true

[tool.pytest.ini_options]
    addopts = [
        "--cov-report=term-missing",
        "--cov-report=xml",
        "--cov=syrupy_geo",
        "--verbose",
    ]
    console_output_style = "count"
    markers = [
        "integration: marks tests as integration tests (deselect with '-m not integration')",
    ]

[tool.pixi.feature.dev.dependencies]
    pre-commit   = ">=4.5.1,<5"
    pytest       = ">=9"
    pytest-cov   = ">=6.0.0,<8"
    python-build = ">=1.0"
    ruff         = ">=0.15.4,<0.16"
    twine        = ">=6.1"

[tool.pixi.feature.dev.tasks]
    build             = "python -m build --sdist --wheel ."
    check-dist        = "twine check dist/*"
    format            = "ruff format . && ruff check --fix ."
    lint              = "pre-commit run --all-files"
    publish           = "python -m twine upload dist/*"
    run-ruff-check    = "ruff check ."
    tests             = "pytest tests/ -m 'not integration'"
    tests-integration = "pytest tests/ -m integration"

[tool.pixi.feature.py312.dependencies]
    python = "3.12.*"

[tool.pixi.feature.py313.dependencies]
    python = "3.13.*"

[tool.pixi.feature.py314.dependencies]
    python = "3.14.*"

[tool.pixi.environments]
    default = ["dev"]
    dev     = ["dev"]
    py312   = ["dev", "py312"]
    py313   = ["dev", "py313"]
    py314   = ["dev", "py314"]

[tool.pixi.dependencies]
    geopandas = ">=1.1.2,<2"
    pip       = ">=24"
    pyarrow   = ">=15.0.0"
    s3fs      = ">=2024.1.0"
    xarray    = ">=2026.2.0,<2027"
    zarr      = ">=3.1.5,<4"
